@@ -342,7 +342,7 @@ inline u32 PixelBlend16_simd ( const u32 c2, const u32 c1 )
 #endif
 
 /*!
-	Pixel = dest * ( 1 - SourceAlpha ) + source * SourceAlpha
+	Pixel = dest * ( 1 - SourceAlpha ) + source * SourceAlpha (OpenGL blending)
 */
 inline u32 PixelBlend32 ( const u32 c2, const u32 c1 )
 {
@@ -351,7 +351,6 @@ inline u32 PixelBlend32 ( const u32 c2, const u32 c1 )
 
 	if ( 0 == alpha )
 		return c2;
-
 	if ( 0xFF000000 == alpha )
 	{
 		return c1;
@@ -384,6 +383,71 @@ inline u32 PixelBlend32 ( const u32 c2, const u32 c1 )
 	xg &= 0x0000FF00;
 
 	return (c1 & 0xFF000000) | rb | xg;
+}
+
+/*!
+	Pixel =>
+			color = sourceAlpha > 0 ? source, else dest
+			alpha = max(destAlpha, sourceAlpha)
+*/
+inline u16 PixelCombine16 ( const u16 c2, const u16 c1 )
+{
+	if ( video::getAlpha(c1) > 0 )
+		return c1;
+	else
+		return c2;
+}
+
+/*!
+	Pixel =>
+			color = dest * ( 1 - SourceAlpha ) + source * SourceAlpha,
+			alpha = destAlpha * ( 1 - SourceAlpha ) + sourceAlpha
+
+	where "1" means "full scale" (255)
+*/
+inline u32 PixelCombine32 ( const u32 c2, const u32 c1 )
+{
+	// alpha test
+	u32 alpha = c1 & 0xFF000000;
+
+	if ( 0 == alpha )
+		return c2;
+	if ( 0xFF000000 == alpha )
+	{
+		return c1;
+	}
+
+	alpha >>= 24;
+
+	// add highbit alpha, if ( alpha > 127 ) alpha += 1;
+	// stretches [0;255] to [0;256] to avoid division by 255. use division 256 == shr 8
+	alpha += ( alpha >> 7);
+
+	u32 srcRB = c1 & 0x00FF00FF;
+	u32 srcXG = c1 & 0x0000FF00;
+
+	u32 dstRB = c2 & 0x00FF00FF;
+	u32 dstXG = c2 & 0x0000FF00;
+
+
+	u32 rb = srcRB - dstRB;
+	u32 xg = srcXG - dstXG;
+
+	rb *= alpha;
+	xg *= alpha;
+	rb >>= 8;
+	xg >>= 8;
+
+	rb += dstRB;
+	xg += dstXG;
+
+	rb &= 0x00FF00FF;
+	xg &= 0x0000FF00;
+
+	u32 sa = c1 >> 24;
+	u32 da = c2 >> 24;
+	u32 blendAlpha_fix8 = (sa*256 + da*(256-alpha))>>8;
+	return blendAlpha_fix8 << 24 | rb | xg;
 }
 
 
